...
            ),
          ),
        ),
      ),
      confirmActionText: data.footer.confirmActionText,
      confirmButtonKey: const Key(
        'inventory_item_amount_dialog_confirm_button',
      ),
      onConfirm: data.footer.onConfirm,
      secondaryActionText: data.footer.addMoreActionText,
      secondaryButtonKey: const Key(
        'inventory_item_amount_dialog_add_more_button',
      ),
...
